# handler/endpoints.go
@@ -2,10 +2,12 @@ package handler
 
 import (
 	"net/http"
+	"slices"
 
 	"github.com/SawitProRecruitment/UserService/generated"
 	"github.com/SawitProRecruitment/UserService/helper"
 	"github.com/SawitProRecruitment/UserService/repository"
+	"github.com/google/uuid"
 	"github.com/labstack/echo/v4"
 )
 
@@ -26,8 +28,114 @@ func (s *Server) PostEstate(ctx echo.Context) error {
 		Length: req.Length,
 	})
 
+	if err != nil {
+		return err
+	}
+
 	return ctx.JSON(http.StatusOK, generated.PostEstateResponse{
-		Id:      output.Id,
+		Id:      output.Id.String(),
+		Message: "Hello World",
+	})
+}
+
+func (s *Server) GetEstateIdDronePlan(ctx echo.Context, id string, params generated.GetEstateIdDronePlanParams) error {
+	// TODO: Validate that the estate exists
+	estate, err := s.Repository.GetEstateByID(ctx.Request().Context(), repository.GetEstateByIDInput{
+		Id: uuid.MustParse(id),
+	})
+	if err != nil {
+		return err
+	}
+
+	if estate.Id == uuid.Nil {
+		return echo.NewHTTPError(http.StatusNotFound, "Estate not found")
+	}
+
+	// TODO: Return the drone plan
+	output, err := s.Repository.FetchEstateTrees(ctx.Request().Context(), uuid.MustParse(id))
+
+	if err != nil {
+		return err
+	}
+
+	var treeHeights []int
+	for _, tree := range output {
+		treeHeights = append(treeHeights, tree.Height)
+	}
+
+	return nil
+}
+func (s *Server) GetEstateIdStats(ctx echo.Context, id string) error {
+	// TODO: Validate that the estate exists
+	estate, err := s.Repository.GetEstateByID(ctx.Request().Context(), repository.GetEstateByIDInput{
+		Id: uuid.MustParse(id),
+	})
+	if err != nil {
+		return err
+	}
+
+	if estate.Id == uuid.Nil {
+		return echo.NewHTTPError(http.StatusNotFound, "Estate not found")
+	}
+
+	output, err := s.Repository.FetchEstateTrees(ctx.Request().Context(), uuid.MustParse(id))
+
+	if err != nil {
+		return err
+	}
+
+	var treeHeights []int
+	for _, tree := range output {
+		treeHeights = append(treeHeights, tree.Height)
+	}
+
+	// TODO: Return the stats
+	return ctx.JSON(http.StatusOK, generated.GetEstateIdStatsResponse{
+		Max:    slices.Max(treeHeights),
+		Min:    slices.Min(treeHeights),
+		Count:  len(treeHeights),
+		Median: int(helper.Median(treeHeights)),
+	})
+}
+
+func (s *Server) PostEstateIdTree(ctx echo.Context, id string) error {
+
+	var req generated.PostEstateTreeRequest
+
+	if err := ctx.Bind(&req); err != nil {
+		return err
+	}
+
+	if err := helper.ValidateStruct(req); err != nil {
+		return err
+	}
+
+	// TODO: Validate that the estate exists
+	estate, err := s.Repository.GetEstateByID(ctx.Request().Context(), repository.GetEstateByIDInput{
+		Id: uuid.MustParse(id),
+	})
+	if err != nil {
+		return err
+	}
+
+	if estate.Id == uuid.Nil {
+		return echo.NewHTTPError(http.StatusNotFound, "Estate not found")
+	}
+
+	// TODO: Validate that the tree does not exist
+	output, err := s.Repository.StoreEstateIdTree(ctx.Request().Context(), repository.StoreEstateIdTreeInput{
+		EstateId: uuid.MustParse(id),
+		Height:   req.Height,
+		X:        req.X,
+		Y:        req.Y,
+	})
+
+	if err != nil {
+		return err
+	}
+
+	return ctx.JSON(http.StatusOK, generated.PostEstateResponse{
+		Id:      output.Id.String(),
 		Message: "Hello World",
 	})
 }
